2004-11-01  Eric B. Weddington  <ericw@evcohs.com>

	* doc/INSTALL: Update release versions compatible with avr-libc and
	instructions.
	[Bug #10150]

2004-11-01  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/io8515.h: Correct license with permission from Marek 
	Michalkiewicz.
	* include/avr/io8534.h: Ditto.
	* include/avr/io8535.h: Ditto.
	* include/avr/ioat94k.h: Ditto.
	* include/avr/iom103.h: Ditto.
	* include/avr/iom161.h: Ditto.
	* include/avr/iom163.h: Ditto.
	* include/avr/iom323.h: Ditto.
	* include/avr/iom8.h: Ditto.
	* include/avr/iotn11.h: Ditto.
	* include/avr/iotn12.h: Ditto.
	* include/avr/iotn15.h: Ditto.
	* include/avr/iotn22.h: Ditto.
	* include/avr/iotn28.h: Ditto.
	* include/avr/parity.h: Ditto.

2004-11-01  Eric B. Weddington  <ericw@evcohs.com>

	* crt1/gcrt1.S: Correct license with permission from Marek 
	Michalkiewicz.
	* common/macros.inc: Ditto.
	* include/errno.h: Ditto.
	* include/setjmp.h: Ditto.
	* include/stdint.h: Ditto.
	* include/string.h: Ditto.
	* include/avr/crc16.h: Ditto.
	* include/avr/delay.h: Ditto.
	* include/avr/eeprom.h: Ditto.
	* include/avr/interrupt.h: Ditto.
	* include/avr/io1200.h: Ditto.
	* include/avr/io2313.h: Ditto.
	* include/avr/io2323.h: Ditto.
	* include/avr/io2333.h: Ditto.
	* include/avr/io2343.h: Ditto.
	* include/avr/io4414.h: Ditto.
	* include/avr/io4433.h: Ditto.
	* include/avr/io4434.h: Ditto.
	* include/avr/io76c711.h: Ditto.
	* include/avr/sfr_defs.h: Ditto.
	* include/avr/signal.h: Ditto.
	* include/avr/twi.h: Ditto.

2004-11-01  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* libm/fplib/asin.S: Put lookup table into .progmem.gcc_fplib section.
	[Bug #9348]
	* libm/fplib/atan.S: Ditto.

2004-10-30  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/avr/iocan128.h: Remove duplicate definitions of PINAn.
	[Bug #10837]

2004-10-29  Eric B. Weddington  <ericw@evcohs.com>
